# open-retina

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  LNP_test.ipynb  MANIFEST.in  Makefile  README.md  Singularity.def  baccus_data.ipynb  hoefling_2022_model_teardown.ipynb  mkdocs.yml  model_experiments.ipynb  pyproject.toml  random.ipynb  requirements-dev.txt  requirements-devmodels.txt  requirements.txt  run.sh  sweep.py  training_loop.ipynb  training_loop_new_dataloader.ipynb  training_loop_wandb.ipynb  wrangling.ipynb
.hydra/: config.yaml  hydra.yaml
configs/: example_session_agnostic.yaml  example_train_core_readout.yaml  example_train_core_readout_low_res.yaml  example_train_photorec_model.yaml  goldin_2022_core_readout.yaml  goldin_2022_core_readout_axolotl.yaml  goldin_2022_core_readout_hparams_search.yaml  goldin_2022_core_readout_mouse.yaml  h5_core_readout.yaml  hdf5_core_readout.yaml  hoefling_2022.yaml  hoefling_2024_core_future_predictor_low_res.yaml  hoefling_2024_core_readout_high_res.yaml  hoefling_2024_core_readout_low_res.yaml  hoefling_2024_core_readout_low_res_frozen_pretrained_core.yaml  hoefling_2024_core_readout_low_res_gray_scale.yaml  hoefling_2024_core_readout_low_res_hyperparams_search.yaml  hoefling_2024_core_readout_low_res_lnp.yaml  hoefling_2024_core_readout_low_res_unified.yaml  hoefling_2024_distributed_example.yaml  karamanlis_2024_core_readout.yaml  karamanlis_2024_core_readout_marmoset.yaml  karamanlis_2024_core_readout_mouse.yaml  karamanlis_core_readout.yaml  maheswaranathan_2023_LNP.yaml  maheswaranathan_2023_core_readout.yaml  maheswaranathan_core_readout.yaml  minimal_session_agnostic.yaml  minimal_session_agnostic_lightning.yaml  sridhar_2025_nm_sc.yaml  sridhar_2025_nm_sc_multicell.yaml  sridhar_2025_wn_sc.yaml  sridhar_2025_wn_sc_multicell.yaml  template_outer_config.yaml  vystrcilova_2024_nm_cnn.yaml  vystrcilova_2024_nm_ln.yaml  vystrcilova_2024_nm_sc.yaml  vystrcilova_2024_wn_cnn.yaml  vystrcilova_2024_wn_ln.yaml  vystrcilova_2024_wn_sc.yaml
docs/: CNAME  community.md  containers.md  faq.md  index.md  mkdocs_hooks.py  references.md
example_configs/: train_core_readout.yaml
hydra_plugins/: resolvers.py
notebooks/: 2D_test.ipynb  LNP_test.ipynb  baccus_data.ipynb  cell-type_training.ipynb  data_comparison.ipynb  evaluate_hoefling copy.ipynb  generate_mei_example.ipynb  hoefling_gradient_analysis.ipynb  hyperparameter_search_hoefling_2024.ipynb  interpret_2_mei_example.ipynb  interpret_3_hoefling_gradient_analysis.ipynb  load_modular_model.ipynb  mei_and_init_kernels_OFF.npz  mei_and_init_kernels_ON.npz  mei_example.ipynb  most_discriminative_stimulus.ipynb  new_datasets_guide.ipynb  openretina_demo.ipynb  test_repeats.ipynb  test_upsampling.ipynb  training_cnns_vystrcilova_2024.ipynb  training_goldin_2022.ipynb  training_hoefling_2024.ipynb  training_hoefling_2024_jax.ipynb  training_lns_vystrcilova_2024.ipynb  training_loop_chirp_mb.ipynb  training_loop_new_data.ipynb  training_loop_wandb.ipynb  training_sc_multicell_sridhar_2025.ipynb  training_sc_sridhar_2025.ipynb  training_sc_vystrcilova_2024.ipynb  tuto_2_training_hoefling_2024.ipynb  tuto_3_new_datasets_guide.ipynb  tuto_4_hyperparameter_search_hoefling_2024.ipynb  vector_field_analysis.ipynb  vector_field_analysis_colors.ipynb  vector_field_analysis_goldin_2022.ipynb  vector_field_analysis_hoefling_2024.ipynb  vector_field_analysis_hoefling_2024_foo.ipynb  vector_field_analysis_hoefling_2024_special_figure.ipynb
openretina/: __init__.py  builder.py  cell_type_training.py  constants.py  correlation_loss.py  cyclers.py  dataloaders.py  dev_models.py  early_stopping.py  h5_handling.py  hoefling_2022_configs.py  hoefling_2022_data_io.py  hoefling_2022_models.py  maheswaranathan_2023_data_io.py  measures.py  metrics.py  misc.py  neuron_data_io.py  nnfabrik_model_loading.py  photoreceptor_layer_torch.py  plotting.py  stimuli.py  tracking.py  training.py  video_analysis.py
openretina_dataloading/: __init__.py  artificial_stimuli.py  base.py  h5_dataset_reader.py  setup.py
openretina_scripts/: optimize_mei.py  optimize_mei_autoencoder.py  train.py  train_sparse_autoencoder.py
(+370 files in other folders)
