[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openretina"
version = "0.1.0"
authors = [
  { name="Federico D'Agostino"},
  { name="Thomas Zenkel"},
  { name="Larissa Höfling"},
]
description = "Open source retina model architectures and training setups"
requires-python = ">=3.10"
dynamic = ["dependencies"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/open-retina/open-retina"
Issues = "https://github.com/open-retina/open-retina/issues"

[tool.setuptools.packages]
find = {exclude = ["tests", "scripts"]}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"openretina" = ["py.typed"]

[project.optional-dependencies]
dev = [
    "neuralpredictors",
]

[tool.ruff]
line-length = 120
indent-width = 4
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = ["E", "W", "F"]
lint.extend-select = ["I"]
lint.ignore = ["F722"]  # F722 prevents false positive for jaxtypes
exclude = [
    "openretina/legacy/",
    "scripts/legacy/",
]

[tool.mypy]
warn_return_any = false
exclude = [
    "openretina/legacy/",
    "scripts/legacy/",
]
[[tool.mypy.overrides]]
module = [
    "neuralpredictors.*",
    "h5py",
    "scipy",
    "wandb",
    "seaborn",
    "torchvision.*",
]
ignore_missing_imports = true

