[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openretina"
version = "1.0.0"
authors = [
    { name = "Federico D'Agostino" },
    { name = "Thomas Zenkel" },
    { name = "Larissa Höfling" },
]
description = "Open source retina model architectures and training setups"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/open-retina/open-retina"
Issues = "https://github.com/open-retina/open-retina/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.0",
    "pytest",
    "types-psutil",
    "types-tqdm",
    "types-PyYAML",
    "types-requests",
    "nbmake",
    "jupyterlab",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
devmodels = ["neuralpredictors"]

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages]
find = { exclude = ["tests"] }

[tool.setuptools.package-data]
"openretina" = ["py.typed", "configs/*.yaml", "configs/**/*.yaml"]

[project.scripts]
openretina = "openretina.cli.openretina_main:main"


[tool.ruff]
line-length = 120
indent-width = 4
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = ["E", "W", "F"]
lint.extend-select = ["I"]
lint.ignore = ["F722"]                                           # F722 prevents false positive for jaxtypes
exclude = ["openretina/legacy/", "tests/paper_openretina_2025/"]

[tool.mypy]
warn_return_any = false
exclude = ["openretina/legacy/", "tests/paper_openretina_2025/"]
[[tool.mypy.overrides]]
module = [
    "neuralpredictors.*",
    "h5py",
    "scipy.*",
    "wandb",
    "seaborn",
    "torchvision.*",
    "moviepy",
]
ignore_missing_imports = true
